--- a/public/board/style.css
+++ b/public/board/style.css
@@ -1,11 +1,4 @@
-body {
-    font-family: Arial, sans-serif;
 
-  }
-
-  h1 {
-    text-align: center;
-  }
 
   .container {
     display: grid;
@@ -13,43 +6,20 @@ body {
     padding: 20px;
   }
 
-  #gameBoard {
-    /* width: 100%; */
+  .boardSide{
+    margin: 0 100px;
+  }
 
+  #gameBoard{
     margin: 0 auto;
   }
 
   input {
-    /* width: 30px; */
-    /* height: 30px; */
     border: 1px solid #ccc;
     border-radius: 0.25rem;
     font-size: 1.5rem;
     text-align: center;
     caret-color: transparent;
-  }
-
-  .timer {
-    width: 100%;
-    height: 20px;
-    border: 2px solid #333;
-    border-radius: 4px;
-    margin-top: 20px;
-  }
-
-  #timerProgress {
-    width: 0%;
-    height: 100%;
-    background-color: #ccc;
-    border-radius: 4px;
-  }
-
-  #control {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 50px;
   }
 
   
@@ -59,37 +29,34 @@ body {
   }
 
   #scoreBoard {
-    margin-top: 20px;
     width: 100%;
   }
 
-  #scoreBoard th,
-  #scoreBoard td {
-    padding: 10px;
-    text-align: center;
-    border: 1px solid #ccc;
-
-  }
-
   #scoreBoard th {
-    background-color: #333;
-    color: white;
+    text-align: center;
   }
 
-  #scoreBoard tr:nth-child(odd) {
-    background-color: #f2f2f2;
+  #scoreBoard td {
+    text-align: center;
   }
-
+ 
   @media (max-width: 768px) {
     .container {
       grid-template-columns: 1fr;
     }
 
-    #control {
-      padding: 0 20px;
-    }
+
 
     #gameBoard {
       width: 100%;
+    }
+
+    #scoreBoard {
+      margin-top: 20px;
+      width: 100%;
+    }
+
+    .boardSide{
+      margin: 0;
     }
   }
